fix last controlpane's buttons overflow

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -4,6 +4,17 @@
   padding-bottom: 8px;
 }
 
-.buttonRow > * {
-  min-width: 50px;
+@media (max-width: 480px) {
+  .buttonRow {
+    overflow-x: auto;
+    display: flex;
+    position: absolute;
+    height: 70px;
+    left: 24px;
+    right: 24px;
+  }
+
+  .buttonRow > * {
+    min-width: 50px;
+  }
 }
